# RowPress

./: README.md
characterization/: build.sh  run_bare.py
characterization/DRAM-Bender/: .gitmodules  README.md
characterization/DRAM-Bender/projects/U200/: alveo-u200-master.xdc
characterization/DRAM-Bender/projects/U200/U200.ip_user_files/ipstatic/hdl/: gtwizard_ultrascale_v1_7_gthe4_cpll_cal_rx.v  gtwizard_ultrascale_v1_7_gthe4_cpll_cal_tx.v  gtwizard_ultrascale_v1_7_gthe4_delay_powergood.v  gtwizard_ultrascale_v1_7_gtye4_cpll_cal_rx.v  gtwizard_ultrascale_v1_7_gtye4_cpll_cal_tx.v  gtwizard_ultrascale_v1_7_gtye4_delay_powergood.v
characterization/DRAM-Bender/projects/U200/U200.ip_user_files/sim_scripts/phy_ddr4/modelsim/: custom_parts_ddr4_2016_4_and_above.csv
characterization/DRAM-Bender/projects/U200/U200.srcs/sources_1/ip/phy_rdimm_x8_dual/rtl/cal/: ddr4_v2_2_cal_rd_en.sv.orig
characterization/DRAM-Bender/projects/XUPVVH/XUPVVH.ip_user_files/ipstatic/hdl/: gtwizard_ultrascale_v1_7_gthe4_cpll_cal_rx.v  gtwizard_ultrascale_v1_7_gthe4_cpll_cal_tx.v  gtwizard_ultrascale_v1_7_gthe4_delay_powergood.v  gtwizard_ultrascale_v1_7_gtye4_cpll_cal_rx.v  gtwizard_ultrascale_v1_7_gtye4_cpll_cal_tx.v  gtwizard_ultrascale_v1_7_gtye4_delay_powergood.v
characterization/DRAM-Bender/sources/apps/RowPress/: CMakeLists.txt  double-sided-checkerboard.pattern
characterization/DRAM-Bender/sources/apps/RowPress/src/: Main.cpp  Options.cpp  Options.h  RowPress.cpp  RowPress.h  SMC_Registers.h  Tester.cpp  Tester.h  Tester_SMC_Routines.cpp
characterization/analysis/plots/: plot_utils.py
characterization/analysis/scripts/: process_ber_log.py  process_data_local.sh  process_data_slurm.sh  process_ecc.py  process_ftber_log.py  process_hcf_bitflipdirection.py  process_hcf_log.py  process_min_tAggON.py  process_relation.py  script_utils.py
characterization/data_pattern_sweep/: double-checkeredI.pattern  double-colstripe.pattern  double-colstripeI.pattern  double-rowstripe.pattern  double-rowstripeI.pattern  single-checkeredI.pattern  single-colstripe.pattern  single-colstripeI.pattern  single-rowstripe.pattern  single-rowstripeI.pattern
characterization/patterns/: single-checkered.pattern
characterization/scripts/: utils_bare.py
demonstration/: .gitignore  Hist.cpp  Hist.h  Makefile  Mapping.cpp  Mapping.h  analyze.py  disable_prefetching.sh  main-algo1.cpp  main-algo2.cpp  main.cpp  mount_hugepage.sh  real_system_access.ipynb  real_system_bitflips.ipynb
mitigation/: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  analyze.ipynb  build.sh  gen_jobs.py
mitigation/configs/: Baseline.yaml  Graphene.yaml  Graphene1000OpenUntil36.yaml  Graphene419OpenUntil636.yaml  Graphene555OpenUntil336.yaml  Graphene619OpenUntil186.yaml  Graphene724OpenUntil96.yaml  Graphene809OpenUntil66.yaml  PARA.yaml  PARA1000OpenUntil36.yaml  PARA419OpenUntil636.yaml  PARA555OpenUntil336.yaml  PARA619OpenUntil186.yaml  PARA724OpenUntil96.yaml  PARA809OpenUntil66.yaml
mitigation/src/: Config.cpp  Config.h  DRAM.h  DRAM.tpp  Main.cpp  Memory.cpp  Memory.h  Memory.tpp  Request.h  Simulation.cpp  Simulation.h  Standards.h  Traits.h  Translation.cpp  Translation.h  bitmanip.cpp  bitmanip.h
mitigation/src/Controller/: AddrMapper.h  AddrMapper.tpp  Controller.h  Controller.tpp  Refresh.cpp  Refresh.h  Refresh.tpp  RowPolicy.h  RowPolicy.tpp  RowTable.h  RowTable.tpp  Scheduler.h  Scheduler.tpp
mitigation/src/DRAMStandard/: DDR3.cpp  DDR3.h  DDR4.cpp  DDR4.h  DDR5.cpp  DDR5.h  GDDR5.cpp  GDDR5.h  LPDDR4.h
mitigation/src/Power/: Power.cpp  Power.h  Power.tpp  PowerComponents.h  PowerCounters.h
mitigation/src/Processor/: Cache.cpp  Cache.h  Core.cpp  Core.h  Processor.cpp  Processor.h  Trace.cpp  Trace.h
mitigation/src/RowHammer/: Graphene.h  Graphene.tpp  PARA.h  PARA.tpp  RefreshBasedDefense.h  RefreshBasedDefense.tpp  SSRD.h  SSRD.tpp
mitigation/src/Statistics/: StatType.h  Statistics.h  StatisticsWrapper.h
